@@ -11,7 +11,7 @@ dist_check_SCRIPTS = check-run1
 #
 dist_man_MANS = arp-scan.1 get-oui.1 get-iab.1 arp-fingerprint.1 mac-vendor.5
 #
-arp_scan_SOURCES = arp-scan.c arp-scan.h error.c wrappers.c utils.c hash.c hash.h obstack.c obstack.h
+arp_scan_SOURCES = arp-scan.c arp-scan.h error.c wrappers.c utils.c hash.c hash.h obstack.c obstack.h mt19937ar.c
 arp_scan_LDADD = $(LIBOBJS)
 #
 dist_pkgdata_DATA = ieee-oui.txt ieee-iab.txt mac-vendor.txt
