@@ -12,7 +12,7 @@
 #
 # Blank lines and lines beginning with "#" are ignored.
 #
-# This file was automatically generated by get-iab at 2007-03-27 13:23:26
+# This file was automatically generated by get-iab at 2007-04-10 11:15:58
 # using data from http://standards.ieee.org/regauth/oui/iab.txt
 #
 # Do not edit this file.  If you want to add additional MAC-Vendor mappings,
@@ -1861,3 +1861,17 @@
 0050C2732	Schlumberger K.K.
 0050C2733	Cimetrics Research Pty Ltd
 0050C2734	CardioMEMS Inc.
+0050C2735	Duma Video, Inc.
+0050C2736	Nika Ltd
+0050C2737	Teradici Corporation
+0050C2738	Miracom Technology Co., Ltd.
+0050C2739	Tattile srl
+0050C273A	Naturela Ltd.
+0050C273B	On Air Networks
+0050C273C	Simicon
+0050C273D	cryptiris
+0050C273E	Quantec Networks GmbH
+0050C273F	MEDAV GmbH
+0050C2740	McQuay China
+0050C2741	Dain
+0050C2742	Fantuzzi Reggiane
