@@ -12,7 +12,7 @@
 #
 # Blank lines and lines beginning with "#" are ignored.
 #
-# This file was automatically generated by get-oui at 2007-03-27 13:23:02
+# This file was automatically generated by get-oui at 2007-04-10 11:15:50
 # using data from http://standards.ieee.org/regauth/oui/oui.txt
 #
 # Do not edit this file.  If you want to add additional MAC-Vendor mappings,
@@ -2275,7 +2275,7 @@
 0008F3	WANY
 0008F4	Bluetake Technology Co., Ltd.
 0008F5	YESTECHNOLOGY Co.,Ltd.
-0008F6	SUMITOMO ELECTRIC HIGHTECHS.co.,ltd.
+0008F6	Sumitomo Electric System Solutions Co.,Ltd.
 0008F7	Hitachi Ltd, Semiconductor &amp; Integrated Circuits Gr
 0008F8	Guardall Ltd
 0008F9	Padcom, Inc.
@@ -2711,7 +2711,7 @@
 000AA8	ePipe Pty. Ltd.
 000AA9	Brooks Automation GmbH
 000AAA	AltiGen Communications Inc.
-000AAB	TOYOTA MACS, INC.
+000AAB	Toyota Technical Development Corporation
 000AAC	TerraTec Electronic GmbH
 000AAD	Stargames Corporation
 000AAE	Rosemount Process Analytical
@@ -4659,7 +4659,7 @@
 001245	Zellweger Analytics, Inc.
 001246	T.O.M TECHNOLOGY INC..
 001247	Samsung Electronics Co., Ltd.
-001248	Kashya Inc.
+001248	EMC Corporation (Kashya)
 001249	Delta Elettronica S.p.A.
 00124A	Dedicated Devices, Inc.
 00124B	Texas Instruments
@@ -6086,7 +6086,7 @@
 0017D8	Magnum Semiconductor, Inc.
 0017D9	AAI Corporation
 0017DA	Spans Logic
-0017DB	PRIVATE
+0017DB	CANKO TECHNOLOGIES INC.
 0017DC	DAEMYUNG ZERO1
 0017DD	Clipsal Australia
 0017DE	Advantage Six Ltd
@@ -7142,6 +7142,53 @@
 001BF8	Digitrax Inc.
 001BF9	Intellitect Water Ltd
 001BFA	G.i.N. mbH
+001BFB	Alps Electric Co., Ltd
+001BFC	ASUSTek COMPUTER INC.
+001BFD	Dignsys Inc.
+001BFE	Zavio Inc.
+001BFF	Millennia Media inc.
+001C00	Entry Point, LLC
+001C01	ABB Oy Drives
+001C02	Atto Devices, Inc
+001C03	Betty TV Technology AG
+001C04	Airgain, Inc.
+001C05	Nonin Medical Inc.
+001C06	Siemens Numerical Control Ltd., Nanjing
+001C07	Cwlinux Limited
+001C08	Anystream, Inc.
+001C09	SAE Electronic Co.,Ltd.
+001C0A	Shenzhen AEE Technology
+001C0B	SmartAnt Telecom
+001C0C	TANITA Corporation
+001C0D	G-Technology, Inc.
+001C0E	Cisco Systems
+001C0F	Cisco Systems
+001C10	Cisco-Linksys, LLC
+001C11	Motorola CHS
+001C12	Motorola Mobile Devices
+001C13	OPTSYS TECHNOLOGY CO., LTD.
+001C14	VMware, Inc
+001C15	TXP Corporation
+001C16	ThyssenKrupp Elevator
+001C17	Nortel
+001C18	Sicert S.r.L.
+001C19	secunet Security Networks AG
+001C1A	Thomas Instrumentation, Inc
+001C1B	Hyperstone GmbH
+001C1C	Center Communication Systems GmbH
+001C1D	CHENZHOU GOSPELL DIGITAL TECHNOLOGY CO.,LTD
+001C1E	emtrion GmbH
+001C1F	Quest Retail Technology Pty Ltd
+001C20	CLB Benelux
+001C21	Nucsafe Inc.
+001C22	Aeris Elettronica s.r.l.
+001C23	Dell Inc
+001C24	Formosa Wireless Systems Corp.
+001C25	Hon Hai Precision Ind. Co.,Ltd.
+001C26	Hon Hai Precision Ind. Co.,Ltd.
+001C27	Sunell Electronics Co.
+001C28	Sphairon Access Systems GmbH
+001C29	CORE DIGITAL ELECTRONICS CO., LTD
 001C7C	PERQ SYSTEMS CORPORATION
 002000	LEXMARK INTERNATIONAL, INC.
 002001	DSP SOLUTIONS, INC.
